some jcmd /gc/heap_dump tests failed: hprof output contains warning or error

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • b49
    • x86
    • generic
    • Verified

        test cases:
        jcmd/gc/heap_dump/className
        jcmd/gc/heap_dump/cmdFile
        jcmd/gc/heap_dump_all/className

        output:
            .....
         
            [2014-12-19T05:30:28.56] Test failure: hprof output contains warning or error
            [2014-12-19T05:30:28.56] at jcmd.gc.heap_dump.HeapDump.launchJhat(HeapDump.java:44)
            [2014-12-19T05:30:28.56] Test failure: hprof output contains warning or error
            [2014-12-19T05:30:28.56] at jcmd.gc.heap_dump.HeapDump.launchJhat(HeapDump.java:44)
            [2014-12-19T05:30:28.71] [2014-12-19T05:30:28.71] # Test level exit status: 0

        aurora: http://aurora.ru.oracle.com/functional/faces/RunDetails.xhtml?names=665112.JAVASE.NIGHTLY.VM.RT_Baseline.2014-12-18-322
        log: http://aurora-ds3.us.oracle.com:9502/runs%2F665112.JAVASE.NIGHTLY.VM.RT_Baseline.2014-12-18-322/results/ResultDir/className/className.log
        other two logs can be found at aurora link.

        I suspect this is an infra structure issues. Not sure about it.

          There are no Sub-Tasks for this issue.

              Assignee:
              Jiangli Zhou
              Reporter:
              Yumin Qi
              Votes:
              0 Vote for this issue
              Watchers:
              10 Start watching this issue

                Created:
                Updated:
                Resolved: