8067982: Some jcmd /gc/heap_dump tests failed: hprof output contains warning or error

Include shared symbols in SymbolTable::symbols_do(SymbolClosure).

Reviewed-by: minqi, farvidsson, coleenp